--- a/views/layout.html
+++ b/views/layout.html
@@ -1,36 +1,37 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/custom.css"/>
+<!DOCTYPE html>
+<html>
 
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <header>
+<head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/custom.css" />
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+<header>
     <nav>
-    <div class="nav-wrapper teal lighten-2">
-      <a href="#!" class="brand-logo right">Trip Planner<i class="large material-icons">place</i></a>
-      <ul class="left hide-on-med-and-down">
-        <li class="active"><a href="sass.html">Home</a></li>
-        <li><a href="badges.html">About</a></li>
-        <li><a href="collapsible.html">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo right">Trip Planner<i class="large material-icons">place</i></a>
+            <ul class="left hide-on-med-and-down">
+                <li class="active"><a href="sass.html">Home</a></li>
+                <li><a href="badges.html">About</a></li>
+                <li><a href="collapsible.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    </header>
-    <body class="teal lighten-5">
+</header>
 
-      {% block content %}
-      {% endblock %}
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/custom.js"></script>
-    </body>
-  </html>
+<body class="teal lighten-5">
 
+    {% block content %} {% endblock %}
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+</body>
+
+</html>
