--- a/views/layout.html
+++ b/views/layout.html
@@ -32,6 +32,10 @@
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
     <!--Import jQuery before materialize.js-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfQxgWt-LSZcEmTEN8581Uq9SzZHnpuys"></script>
+
+    <script src="/js/map.js"></script>
+
 </body>
 
 </html>
