--- a/views/layout.html
+++ b/views/layout.html
@@ -35,6 +35,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfQxgWt-LSZcEmTEN8581Uq9SzZHnpuys"></script>
 
     <script src="/js/map.js"></script>
+    <script src="/js/trip.js"></script>
+
+    
 
 </body>
 
